# G-Mov_Project

./: LICENSE  README.md
g_mov_assets/: README.md
g_mov_assets/cad_files/: acccel_base.FCStd  accel_gy_mpu.20250303-082318.FCBak  accel_gy_mpu.FCStd  assembly_g_mov.FCStd  base_gmov.FCStd  conexion_servomotor.FCStd  g_mov_assembly.FCStd  hex_spacer_10mm.FCStd  hex_spacer_15mm.FCStd  hex_spacer_20mm.FCStd  hex_spacer_6mm.FCStd  mpu6050_accel.FCStd  picam.FCStd  picam_support.FCStd  raspberry_pi_cam_v1-3.FCStd  servo_base.FCStd  servo_connection.FCStd  servo_mg99.FCStd  servomotor_mg995.FCStd  soporte_pi_cam.FCStd
g_mov_assets/iges_files/: accel.iges  accel_base.iges  picam.iges  picam_support.iges  servo_base.iges  servo_conn.iges  servo_mg996r.iges  spacer_m3x10.iges  spacer_m3x20.iges  spacer_m3x6.iges
g_mov_assets/mesh_files/: base_gmov-Body.stl  raspberry_pi_cam_v1-3-Body.stl  servomotor_mg995-Body.stl
g_mov_base/: README.md  package.xml  setup.cfg  setup.py
g_mov_base/g_mov_base/: accel_publisher.py  head_track_with_servo.py  mosquitto_accel_sub.py  mosquitto_fall_sub.py  mosquitto_servo_sub.py  servo_subscriber.py  thingsboard_accel_sub.py  thingsboard_fall_sub.py  thingsboard_servo_pub.py  thingsboard_servo_sub.py  thingspeak_accel_sub.py  thingspeak_cam_sub.py  thingspeak_servo_sub.py
g_mov_base/launch/: g_mov_bringup.launch.py  mosquitto_and_ros2.launch.py  mosquitto_nodes.launch.py  mqtt_and_ros2.launch.py  sensors_bringup.launch.py  thignsboard_nodes.launch.py  thingsboard_nodes.launch.py
g_mov_cam/: CMakeLists.txt  README.md  package.xml
g_mov_cam/src/: custom_image_transport.cpp
g_mov_description/: CMakeLists.txt  README.md  package.xml
g_mov_description/cad_files/: assembly_g_mov.FCStd  base_gmov.FCStd  conexion_servomotor.FCStd  mpu6050_accel.FCStd  raspberry_pi_cam_v1-3.FCStd  servomotor_mg995.FCStd  soporte_pi_cam.FCStd
g_mov_description/launch/: display.launch.py  rsp.launch.py
g_mov_description/mesh_files/: conexion_servomotor-Body.stl  mpu6050_accel-Body.stl  soporte_pi_cam-Body.stl
g_mov_description/meshes/: accel.stl  accel_base.stl  picam.stl  picam_sup.stl  servo_base.stl  servo_mg996r.stl  spacer_m3x15.stl  spacer_m3x6.stl
g_mov_description/urdf/: g_mov.urdf.xacro  g_mov_gz.urdf.xacro  g_mov_macros.urdf.xacro  g_mov_materials.urdf.xacro
g_mov_gz/: CMakeLists.txt  package.xml
g_mov_gz/config/: ros_gz_bridge.yaml
g_mov_gz/launch/: gz_ros.launch.py  spawn_module.launch.py
g_mov_local_mqtts_notes/: README.md  hostname_test.py  localhost_test_tls.py  localhost_usps_tls.py
g_mov_msgs/: CMakeLists.txt  package.xml
g_mov_msgs/msg/: ServoPoseStamped.msg
g_mov_opencv_py/: README.md  package.xml  setup.cfg  setup.py
g_mov_opencv_py/g_mov_opencv_py/: fall_detect_img_raw_gui.py  fall_detect_img_raw_no_gui.py  get_people_centered.py  get_people_in_frame.py  module_face_recognition.py  module_fall_detection.py  modules_demo.py
g_mov_webpage/: 2_mqtt_cam.py  3_mqtt_practice.py  4_mqtt_subscriber.py  README.md  cam_test.py  flask_app.py  flask_mqtt_image.py  flask_sensor_visualization.py  main.py  mqtt_subscriber.py
g_mov_webpage/instance/: database.db
g_mov_webpage/static/css/: style.css
g_mov_webpage/templates/: dashboard_cam_local.html  dashboard_cam_mqtt.html  home.html  index.html  sensor_visualization.html
g_mov_webpage/website/: __init__.py  auth.py  models.py  views.py
g_mov_webpage/website/static/: dashboard.css  login.css  main.css  modal.js  personalize.css  signup.css
g_mov_webpage/website/templates/: base.html  dashboard.html  login.html  main.html  personalize.html  sign_up.html  usuarios.html
