<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>g_mov_opencv_py</name>
  <version>1.0.0</version>
  <description>
    Package oriented to the usage of Computer Vision for the g_mov_project.
  </description>
  <maintainer email="dfelipe.lopez@gmail.com">DanielFLopez1620</maintainer>
  <license>BSD 3-Clause License</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>python3-opencv</depend>
  <depend>python3-numpy</depend>
  <depend>python3-mediapipe</depend>
  <depend>v4l2_camera</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
